RESOLVED FIXED184228
Raise the for-call inlining threshold to 190 to fix JetStream/richards regression
https://bugs.webkit.org/show_bug.cgi?id=184228
Summary Raise the for-call inlining threshold to 190 to fix JetStream/richards regres...
Filip Pizlo
Reported 2018-04-01 12:02:35 PDT
I regressed JetStream/richards in https://trac.webkit.org/changeset/230115/webkit. This fixes it.
Attachments
the patch (1.36 KB, patch)
2018-04-01 12:03 PDT, Filip Pizlo
ysuzuki: review+
Filip Pizlo
Comment 1 2018-04-01 12:03:31 PDT
Created attachment 336959 [details] the patch
Yusuke Suzuki
Comment 2 2018-04-01 12:09:24 PDT
Comment on attachment 336959 [details] the patch r=me if we do not get regressions.
Filip Pizlo
Comment 3 2018-04-01 12:13:10 PDT
Local testing says it’s a progression! :-)
Filip Pizlo
Comment 4 2018-04-01 12:46:21 PDT
Radar WebKit Bug Importer
Comment 5 2018-04-01 12:47:24 PDT
Note You need to log in before you can comment on or make changes to this bug.